# BaraCommLib

./: .gitignore  opencode_link.txt
BaraCommLib/: README.md  baraconfig.yaml  pyproject.toml
BaraCommLib/docs/: bararobot.md  configuration.md  development.md  fail_safe.md  index.md  motors.md  pid_io.md  sensors.md  vision.md
BaraCommLib/src/baracommlib/: BaraRobot.py  Motors.py  __init__.py  config_manager.py  default_config.yaml  io.py  line_follower.py  mock_gpio.py  obstacle_avoidance.py  pid_controller.py  sensors.py  state_machine.py  telemetry.py
BaraCommLib/src/baracommlib/exceptions/: MaxPowerExceededException.py
BaraCommLib/src/baracommlib/vision/: __init__.py  auto_trainer.py  color_tracker.py  dataset_tool.py  vision_manager.py
BaraCommLib/tests/: baraconfig.yaml  conftest.py  example_classification.py  example_dataset_gen.py  example_model_train.py  example_usage.py  test_color_tracker.py  test_config_manager.py  test_general.py  test_io_devices.py  test_line_follower_sensor.py  test_motors_primitives.py  test_obstacle_and_wall_follower.py  test_pid.py  test_state_machine.py  test_telemetry_logging.py
