[project]
name = "baracommlib"
version = "0.1.0"
description = ""
authors = [
    {name = "Helemen7",email = "helemen7.matteo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry]
packages = [{include = "baracommlib", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
