[project]
name = "baracommlib"
version = "0.1.0"
description = ""
authors = [
    {name = "Helemen7",email = "helemen7.matteo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "adafruit-circuitpython-vl53l4cd (>=1.3.6,<2.0.0)",
    "adafruit-circuitpython-vl53l1x (>=1.2.9,<2.0.0)",
    "adafruit-circuitpython-vl53l0x (>=3.6.19,<4.0.0)",
    "mpu6050-raspberrypi (>=1.2,<2.0)",
    "adafruit-circuitpython-bno055 (>=5.4.22,<6.0.0)",
    "adafruit-circuitpython-bno08x (>=1.3.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "baracommlib", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
